syntax = "proto3";
option go_package="proto.currency";

service CurrencyService {
  rpc List(ListCurrencyRequest) returns (ListCurrencyResponse);
  rpc Create(CreateCurrencyRequest) returns (CurrencyProfileResponse);
  rpc Get(SingleCurrencyRequest) returns (CurrencyProfileResponse);
  rpc Update(UpdateCurrencyRequest) returns (SuccessResponse);
  rpc Delete(SingleCurrencyRequest) returns (SuccessResponse);
}

message ListCurrencyRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListCurrencyResponse {
  repeated CurrencyProfileResponse currencies = 1;
}

message CreateCurrencyRequest{
  int64 code = 1;
  string name = 2;
  string short_name = 3;
  int64 scale = 4;
  string scale_name = 5;
}

message SingleCurrencyRequest{
  oneof currency_identifier {
    int64 id = 1;
    int64 code = 2;
  }
}

message CurrencyProfileResponse{
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int64 scale = 5;
  string scale_name = 6;
  string deleted_at = 7;
}

message SuccessResponse{
  string response = 1;
}


message UpdateCurrencyRequest{
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int64 scale = 5;
  string scale_name = 6;
}


/*
protoc \
--proto_path=proto/currency \
--go_out=proto/currency \
--go_opt=paths=source_relative proto/currency/currency.proto \
--go-grpc_out=proto/currency \
--go-grpc_opt=paths=source_relative proto/currency/currency.proto
*/